--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -55,17 +55,17 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="../posts/how-to"  class="navbar-item">
-          How To
+        <a href="../notes"  class="navbar-item">
+          Notes
         </a>
-        <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
+        <a href="../posts/about-me"  class="navbar-item">
+          About me
+        </a>
+        <a href="https://github.com/hpdobrica" target="_blank" class="navbar-item">
           GitHub
         </a>
-        <a href="https://jekyllrb.com/" target="_blank"  class="navbar-item">
-          Jekyll
-        </a>
-        <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
-          Obsidian
+        <a href="https://linkedin.com/in/hpdobrica"  target="_blank" class="navbar-item">
+          Linkedin
         </a>
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
