--- a/_includes/FeedContent.html
+++ b/_includes/FeedContent.html
@@ -1,7 +1,8 @@
 <div class="block">
-    <h1>Welcome to the Garden!</h1>
+    <h1>Digital Garden</h1>
     
-    This page is the core feature of this theme, a feed of notes arranged based on the latest date. </br>
+    Here you will find notes on varying topics, ranging from presocratic philosophy to Kubernetes. Whenever I learn something interesting, I'll add it here.</br>
+    You might find some of these a bit strange, and this is fine - I primarily write these for myself, but feel free to use anything you find useful.</br>
     Check <a href="../posts/features" style="color:var(--link);">Features</a> to know how to hide notes from this feed or make this the homepage.
 
     
