--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -7,6 +7,8 @@
         This is my digital garden, which is a fancy way of saying "a place where I put notes about the things I learn".
         <br>
         Go to <a href="../notes"> notes </a> to check out what i've been working on. 
+        <br>
+        If you are interested in how the setup of this digital garden looks like, check <a href="../notes/my-digital-garden-setup">this note</a> out.
 
     </p>
     
