--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -31,11 +31,11 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Digital Garden" property="og:site_name" />
+    <meta content="Dobrica's Digital Garden" property="og:site_name" />
     <meta
-        content="A Jekyll theme for Obsidian users to build digital garden"
+        content="Hi, welcome to my digital garden!"
         property="og:description">
-    <meta content="{{ site.url }}/about/" property="article:author">
+    <meta content="Dobrica Savic" property="article:author">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap"
