--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -35,6 +35,9 @@
     <meta
         content="Hi, welcome to my digital garden!"
         property="og:description">
+    <meta
+        content="Hi, welcome to my digital garden!"
+        name="description">
     <meta content="Dobrica Savic" property="article:author">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
