--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,6 +1,6 @@
 <div class="column is-4">
     <div class="block homeblock">
-    <h1>Welcome to my Digital Garden</h1>
+    <h1>Dobrica's Digital Garden</h1>
     
     <p>
         Hello there, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia. 
