--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -33,10 +33,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Dobrica's Digital Garden" property="og:site_name" />
     <meta
-        content="Hi, welcome to my digital garden!"
+        content="Hi, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia - Welcome to my Digital Garden!"
         property="og:description">
     <meta
-        content="Hi, welcome to my digital garden!"
+        content="Hello there, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia - Welcome to my Digital Garden!"
         name="description">
     <meta content="Dobrica Savic" property="article:author">
     <link rel="preconnect" href="https://fonts.googleapis.com">
