--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -36,7 +36,7 @@
         content="Hi, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia - Welcome to my Digital Garden!"
         property="og:description">
     <meta
-        content="Hello there, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia - Welcome to my Digital Garden!"
+        content="Hi, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia - Welcome to my Digital Garden!"
         name="description">
     <meta content="Dobrica Savic" property="article:author">
     <link rel="preconnect" href="https://fonts.googleapis.com">
