--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -8,8 +8,14 @@
     </p>
         
     <p>
-        Go to <a href="../notes"> notes </a> to check out what i've been working on. 
+        Go to <a href="../notes"> notes </a> to check out what i've been working on. To get started, check out one of these maps of content:
     </p>
+    <ul>
+        <li><a href="../notes/Kubernetes">Kubernetes</a></li>
+        <li><a href="../notes/Docker">Docker</a></li>   
+        <li><a href="../notes/Philosophy">Philosophy</a></li>   
+        <li><a href="../notes/Software-Design">Software Design</a></li>   
+    </ul>
         
     <p>
         If you are interested in how the setup of this digital garden looks like, check <a href="../notes/My-Digital-Garden-setup">this note</a> out.
