--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="../notes/Kubernetes">Kubernetes</a></li>
         <li><a href="../notes/Docker">Docker</a></li>   
-        <li><a href="../notes/SRE">SRE</a></li>   
+        <li><a href="../notes/SRE">Site Reliability Engineering</a></li>   
         <li><a href="../notes/Software-Design">Software Design</a></li>   
         <li><a href="../notes/Philosophy">Philosophy</a></li>   
         
