graph basic test

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -22,6 +22,22 @@
     <p>
         If you are interested in how the setup of this digital garden looks like, check <a href="../notes/My-Digital-Garden-setup">this note</a> out.
     </p>
+
+    <!-- <p>---- dont mind this, im testing something (yes, on production, sue me :D) ----</p> -->
+    <!-- <div id="sigma-container" style="height:400px;"></div> -->
     
     </div>
 </div>
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/graphology/0.24.1/graphology.umd.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/2.2.0/sigma.min.js"></script> -->
+<!-- <script> -->
+  <!-- const container = document.getElementById("sigma-container"); -->
+  <!-- const graph = new graphology.Graph(); -->
+
+  <!-- graph.addNode("John", { label: "John", color: "blue" }); -->
+  <!-- graph.addNode("Mary", { label: "Mary", color: "red" }); -->
+  <!-- graph.addEdge("John", "Mary"); -->
+
+  <!-- const renderer = new Sigma(graph, container); -->
+<!-- </script> -->
