--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,43 +1,29 @@
 <div class="column is-4">
-    <div class="block homeblock">
+  <div class="block homeblock">
     <h1>Dobrica's Digital Garden</h1>
-    
+
     <p>
-        Hello there, my name is Dobrica and I'm a backend-developer-gone-devops from Serbia. 
-        This is my digital garden, which is a fancy way of saying "a place where I put notes about the things I learn".
+      Hello there, my name is Dobrica and I'm a backend-developer-gone-devops
+      from Serbia. This is my digital garden, which is a fancy way of saying "a
+      place where I put notes about the things I learn".
     </p>
-        
+
     <p>
-        Go to <a href="../notes"> notes </a> to check out what i've been working on. To get started, check out one of these maps of content:
+      Go to <a href="../notes"> notes </a> to check out what i've been working
+      on. To get started, check out one of these maps of content, or explore the
+      graph on the right:
     </p>
     <ul>
-        <li><a href="../notes/Kubernetes">Kubernetes</a></li>
-        <li><a href="../notes/Docker">Docker</a></li>   
-        <li><a href="../notes/SRE">Site Reliability Engineering</a></li>   
-        <li><a href="../notes/Software-Design">Software Design</a></li>   
-        <li><a href="../notes/Philosophy">Philosophy</a></li>   
-        
+      <li><a href="../notes/Kubernetes">Kubernetes</a></li>
+      <li><a href="../notes/Docker">Docker</a></li>
+      <li><a href="../notes/SRE">Site Reliability Engineering</a></li>
+      <li><a href="../notes/Software-Design">Software Design</a></li>
+      <li><a href="../notes/Philosophy">Philosophy</a></li>
     </ul>
-        
+
     <p>
-        If you are interested in how the setup of this digital garden looks like, check <a href="../notes/My-Digital-Garden-setup">this note</a> out.
+      If you are interested in how the setup of this digital garden looks like,
+      check <a href="../notes/My-Digital-Garden-setup">this note</a> out.
     </p>
-
-    <!-- <p>---- dont mind this, im testing something (yes, on production, sue me :D) ----</p> -->
-    <!-- <div id="sigma-container" style="height:400px;"></div> -->
-    
-    </div>
+  </div>
 </div>
-
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/graphology/0.24.1/graphology.umd.min.js"></script> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/2.2.0/sigma.min.js"></script> -->
-<!-- <script> -->
-  <!-- const container = document.getElementById("sigma-container"); -->
-  <!-- const graph = new graphology.Graph(); -->
-
-  <!-- graph.addNode("John", { label: "John", color: "blue" }); -->
-  <!-- graph.addNode("Mary", { label: "Mary", color: "red" }); -->
-  <!-- graph.addEdge("John", "Mary"); -->
-
-  <!-- const renderer = new Sigma(graph, container); -->
-<!-- </script> -->
