--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -79,6 +79,7 @@
                     {%- if site.preferences.homepage.enabled -%}
                             <!--- Show Homepage -->
                             {%- include Homepage.html -%}
+                            {%- include Graph.html -%}
                             <script src="/assets/js/modeswitcher.js"></script>
                     {%- else -%}
                             <!--- Show Feed Part -->
