--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -66,9 +66,9 @@
         <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
     <![endif]-->
     <!--<link href="/assets/css/prism.css" rel="stylesheet" />-->
-    <link rel="alternate" type="applicati<!-- Global site tag (gtag.js) - Google Analytics -->
+    <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 
-    <!-- google analytics tag -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P42GRMD4HZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -76,7 +76,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-P42GRMD4HZ');
-    </script>on/rss+xml" href="{{ site.url }}/feed.xml">
+    </script>
 </head>
 
 <body>
