--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -47,13 +47,13 @@
     <meta content="{{ page.title }}" property="og:title">
     <meta content="article" property="og:type">
     <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+    <title>{{site.heading}}</title>
     {%- else -%}
     <meta content="website" property="og:type">
     <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+    <title>{{ page.title }} | {{site.heading}}</title>
     {%- endif -%}
 
-    <!-- <title>{{site.heading}}</title> -->
-    <title>{{ page.title }} -- {{site.heading}}</title>
 
     <link rel="canonical" href="{{site.url}}{{page.url}}" />
     <link rel="apple-touch-icon" href="/assets/img/profile.png">
