--- a/_includes/Graph.html
+++ b/_includes/Graph.html
@@ -5,7 +5,11 @@
 ></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/graphology/0.24.1/graphology.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/2.3.1/sigma.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/2.3.1/sigma.min.js"></script> -->
+<script
+  type="text/javascript"
+  src="/assets/js/vendor/sigma-2.3.1-touch-patch.min.js"
+></script>
 <script
   type="text/javascript"
   src="/assets/js/vendor/graphology-library.min.js"
