update homepage and about me

--- a/_includes/FeedContent.html
+++ b/_includes/FeedContent.html
@@ -1,7 +1,7 @@
 <div class="block">
     <h1>Digital Garden</h1>
     
-    Here you will find notes on varying topics, ranging from presocratic philosophy to Kubernetes. Whenever I learn something interesting, I'll add it here.</br>
+    Here you will find notes on varying topics, ranging from meditation to Kubernetes. Whenever I learn something interesting, I'll add it here.</br>
     You might find some of these a bit strange, and this is fine - I primarily write these for myself, but feel free to use anything you find useful.</br>
 
     
