--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -9,17 +9,9 @@
     </p>
 
     <p>
-      Go to <a href="../notes"> notes </a> to check out what i've been working
-      on. To get started, check out one of these maps of content, or explore the
-      graph on the right:
+      To check out what I've been working onexplore the graph on this page, or click the button below.
     </p>
-    <ul>
-      <li><a href="../notes/Kubernetes">Kubernetes</a></li>
-      <li><a href="../notes/Docker">Docker</a></li>
-      <li><a href="../notes/SRE">Site Reliability Engineering</a></li>
-      <li><a href="../notes/Software-Design">Software Design</a></li>
-      <li><a href="../notes/Philosophy">Philosophy</a></li>
-    </ul>
+    <a class="button" onclick="window.location.assign('/notes');">View All Notes</a>
 
     <p>
       If you are interested in how the setup of this digital garden looks like,
