--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -3,7 +3,7 @@
     <h1>Dobrica's Digital Garden</h1>
 
     <p>
-      Hello there, my name is Dobrica and I'm a backend-developer-gone-devops
+      Hello there, my name is Dobrica Savić, and I'm a backend-developer-gone-devops
       from Serbia. This is my digital garden, which is a fancy way of saying "a
       place where I put notes about the things I learn".
     </p>
